reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_externally_tagged_enum_field-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Drawing"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Drawing"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "f64": {
        "description": "64-bit floating point number",
        "type": "number"
      },
      "reflectapi_demo.tests.serde.Drawing": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Shape"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Drawing",
            "required": [
              "name"
            ],
            "properties": {
              "name": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Shape": {
        "oneOf": [
          {
            "type": "object",
            "title": "Circle",
            "required": [
              "Circle"
            ],
            "properties": {
              "Circle": {
                "type": "object",
                "title": "Circle",
                "required": [
                  "radius"
                ],
                "properties": {
                  "radius": {
                    "$ref": "#/components/schemas/f64"
                  }
                }
              }
            }
          },
          {
            "type": "object",
            "title": "Rect",
            "required": [
              "Rect"
            ],
            "properties": {
              "Rect": {
                "type": "object",
                "title": "Rect",
                "required": [
                  "height",
                  "width"
                ],
                "properties": {
                  "height": {
                    "$ref": "#/components/schemas/f64"
                  },
                  "width": {
                    "$ref": "#/components/schemas/f64"
                  }
                }
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
