reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_externally_tagged_enum_field.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::Drawing"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::Drawing"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "f64",
        "description": "64-bit floating point number"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Drawing",
        "fields": {
          "named": [
            {
              "name": "name",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "shape",
              "type": {
                "name": "reflectapi_demo::tests::serde::Shape"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Shape",
        "variants": [
          {
            "name": "Circle",
            "fields": {
              "named": [
                {
                  "name": "radius",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Rect",
            "fields": {
              "named": [
                {
                  "name": "width",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                },
                {
                  "name": "height",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "f64",
        "description": "64-bit floating point number"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::serde::Drawing",
        "fields": {
          "named": [
            {
              "name": "name",
              "type": {
                "name": "std::string::String"
              },
              "required": true
            },
            {
              "name": "shape",
              "type": {
                "name": "reflectapi_demo::tests::serde::Shape"
              },
              "required": true,
              "flattened": true
            }
          ]
        }
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::Shape",
        "variants": [
          {
            "name": "Circle",
            "fields": {
              "named": [
                {
                  "name": "radius",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Rect",
            "fields": {
              "named": [
                {
                  "name": "width",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                },
                {
                  "name": "height",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
}
