reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_internally_tagged-3.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_rust_code :: < Test > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::serde::Test,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::serde::Test,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod serde {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct A {
                    pub a: u8,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct B {
                    pub b: u8,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct S<Payload, Additional> {
                    #[serde(flatten)]
                    pub payload: Payload,
                    #[serde(flatten)]
                    pub additional: Additional,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                #[serde(tag = "type")]
                pub enum Test {
                    S(
                        super::super::super::reflectapi_demo::tests::serde::S<
                            super::super::super::reflectapi_demo::tests::serde::A,
                            super::super::super::reflectapi_demo::tests::serde::B,
                        >,
                    ),
                }
            }
        }
    }
}
