reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_internally_tagged_enum_field-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Offer"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Offer"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.Offer": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.OfferKind"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Offer",
            "required": [
              "id"
            ],
            "properties": {
              "id": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.OfferKind": {
        "oneOf": [
          {
            "type": "object",
            "title": "Single",
            "required": [
              "business",
              "type"
            ],
            "properties": {
              "business": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "type": {
                "const": "Single"
              }
            }
          },
          {
            "type": "object",
            "title": "Group",
            "required": [
              "count",
              "type"
            ],
            "properties": {
              "count": {
                "$ref": "#/components/schemas/u32"
              },
              "type": {
                "const": "Group"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
