reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_internally_tagged_enum_field-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < Offer > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeOfferSingle(BaseModel):
    """'Single' variant of ReflectapiDemoTestsSerdeOffer"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    id: str
    type_: Literal["Single"] = Field(
        default="Single",
        serialization_alias="type",
        validation_alias="type",
        description="Discriminator field",
    )
    business: str


class ReflectapiDemoTestsSerdeOfferGroup(BaseModel):
    """'Group' variant of ReflectapiDemoTestsSerdeOffer"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    id: str
    type_: Literal["Group"] = Field(
        default="Group",
        serialization_alias="type",
        validation_alias="type",
        description="Discriminator field",
    )
    count: int


class ReflectapiDemoTestsSerdeOffer(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeOfferSingle,
            ReflectapiDemoTestsSerdeOfferGroup,
        ],
        Field(discriminator="type_"),
    ]


class ReflectapiDemoTestsSerdeOfferKindSingle(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Single"] = Field(default="Single", description="Discriminator field")
    business: str


class ReflectapiDemoTestsSerdeOfferKindGroup(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Group"] = Field(default="Group", description="Discriminator field")
    count: int


class ReflectapiDemoTestsSerdeOfferKind(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeOfferKindSingle,
            ReflectapiDemoTestsSerdeOfferKindGroup,
        ],
        Field(discriminator="type"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            OfferSingle = ReflectapiDemoTestsSerdeOfferSingle
            OfferGroup = ReflectapiDemoTestsSerdeOfferGroup
            Offer = ReflectapiDemoTestsSerdeOffer
            OfferKindSingle = ReflectapiDemoTestsSerdeOfferKindSingle
            OfferKindGroup = ReflectapiDemoTestsSerdeOfferKindGroup
            OfferKind = ReflectapiDemoTestsSerdeOfferKind


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Offer] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Offer]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Offer]: Response containing reflectapi_demo.tests.serde.Offer data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Offer,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Offer] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Offer]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Offer]: Response containing reflectapi_demo.tests.serde.Offer data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Offer,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeOffer,
    ReflectapiDemoTestsSerdeOfferKind,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
